[gd_scene load_steps=3 format=3 uid="uid://xrkedtfu66hy"]

[ext_resource type="Script" path="res://scenes/menus/ship_select.gd" id="1_a8qwr"]
[ext_resource type="Script" path="res://addons/ActionIcon/ActionIcon.gd" id="2_bns3c"]

[node name="ShipSelect" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_a8qwr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Select ship"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 128
alignment = 1

[node name="ChooseIcons" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2/ChooseIcons"]
layout_mode = 2
script = ExtResource("2_bns3c")
action_name = &"left"
joypad_mode = 1

[node name="ActionIcon2" type="TextureRect" parent="VBoxContainer/HBoxContainer2/ChooseIcons"]
layout_mode = 2
script = ExtResource("2_bns3c")
action_name = &"right"
joypad_mode = 1

[node name="ActionIcon3" type="TextureRect" parent="VBoxContainer/HBoxContainer2/ChooseIcons"]
layout_mode = 2
script = ExtResource("2_bns3c")
action_name = &"left"
joypad_mode = 2

[node name="ActionIcon4" type="TextureRect" parent="VBoxContainer/HBoxContainer2/ChooseIcons"]
layout_mode = 2
script = ExtResource("2_bns3c")
action_name = &"right"
joypad_mode = 2

[node name="Choose" type="Label" parent="VBoxContainer/HBoxContainer2/ChooseIcons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Choose"
horizontal_alignment = 1

[node name="AcceptIcons" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2/AcceptIcons"]
layout_mode = 2
script = ExtResource("2_bns3c")
action_name = &"start"
joypad_mode = 1

[node name="ActionIcon2" type="TextureRect" parent="VBoxContainer/HBoxContainer2/AcceptIcons"]
layout_mode = 2
script = ExtResource("2_bns3c")
action_name = &"start"
joypad_mode = 2
joypad_model = 4

[node name="ActionIcon3" type="TextureRect" parent="VBoxContainer/HBoxContainer2/AcceptIcons"]
layout_mode = 2
script = ExtResource("2_bns3c")
action_name = &"start"
joypad_mode = 2
joypad_model = 2

[node name="Accept" type="Label" parent="VBoxContainer/HBoxContainer2/AcceptIcons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Accept"

[node name="GridPlayers" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 64
theme_override_constants/v_separation = 64
columns = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 512

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
disabled = true
text = "Back"

[node name="Done" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
disabled = true
text = "Done"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Done" to="." method="_on_done_pressed"]
